--- a/references_3.bib
+++ b/references_3.bib
@@ -1,4 +1,21 @@
 
+@misc{noauthor_worlds_nodate,
+	title = {World’s {Most} {Powerful} {Offshore} {Wind} {Turbine}: {Haliade}-{X} 12 {MW} {\textbar} {GE} {Renewable} {Energy}},
+	url = {https://www.ge.com/renewableenergy/wind-energy/offshore-wind/haliade-x-offshore-turbine},
+	urldate = {2020-09-23}
+}
+
+@book{conseil_international_des_grands_reseaux_electriques_hvdc_2015,
+	address = {Paris},
+	title = {{HVDC} connection of offshore wind power plants},
+	isbn = {978-2-85873-321-7},
+	language = {en},
+	publisher = {CIGRÉ},
+	author = {{Conseil international des grands réseaux électriques} and {Comité d'études B4}},
+	year = {2015},
+	note = {OCLC: 920034203}
+}
+
 @misc{abb_hvdc_2018,
 	title = {{HVDC} technology for offshore wind is maturing},
 	url = {https://new.abb.com/news/detail/8270/hvdc-technology-for-offshore-wind-is-maturing},
@@ -1080,7 +1097,6 @@ FileManager acts as the “home page” of the RSCAD software. It provides a spa
 	title = {Composition and classification of the microgrid},
 	pages = {17}
 }
-
 @article{rocabert_control_2012,
 	title = {Control of {Power} {Converters} in {AC} {Microgrids}},
 	volume = {27},
@@ -1125,6 +1141,7 @@ FileManager acts as the “home page” of the RSCAD software. It provides a spa
 	year = {2009},
 	pages = {1664--1668}
 }
+
 @inproceedings{petropoulos_dynamic_2014,
 	address = {Athens, Greece},
 	title = {Dynamic stability analysis of {HVDC} interconnection of autonomous power system of {Crete} island},
@@ -1645,7 +1662,6 @@ FileManager acts as the “home page” of the RSCAD software. It provides a spa
 	author = {Ali, M.H.},
 	year = {2012}
 }
-
 @book{bose_power_2006,
 	title = {Power {Electronics} {And} {Motor} {Drives},},
 	isbn = {978-0-12-088405-6},
@@ -1655,6 +1671,7 @@ FileManager acts as the “home page” of the RSCAD software. It provides a spa
 	author = {Bose, Bimal K},
 	year = {2006}
 }
+
 @misc{noauthor_rtds_nodate,
 	title = {{RTDS} {Technologies} {Inc}., {RSCAD} modules,},
 	url = {https://www.rtds.com/}
